traffic-policy/circuitbreaking/app.yaml
##################################################################################################
# service1
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    app: service1
spec:
  ports:
  - port: 5678
    name: http
  selector:
    app: service1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v1
  template:
    metadata:
      labels:
        app: service1
        version: v1
    spec:
      containers:
      - name: service1
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678
